--- a/css/main.css
+++ b/css/main.css
@@ -1,36 +1,170 @@
 /* COMMON */
-body {}
-.page {}
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto Slab", serif;
+  list-style: none;
+  text-decoration: none;
+}
 
+body {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  background-image: linear-gradient(
+      -180deg,
+      rgba(0, 0, 0, 0) 0%,
+      rgba(0, 0, 0, 0.35) 50%
+    ),
+    url(../images/anonymous-server-background.jpg);
+  background-position: center;
+  background-size: cover;
+  overflow: hidden;
+}
 
-
+.page {
+  flex-grow: 1;
+}
 
 /* HEADER */
-.page__header {}
-.nav-trigger {}
+.nav-trigger {
+  height: 45px;
+  width: 45px;
+  top: 20px;
+  right: 20px;
+  background-color: black;
+  position: absolute;
+  border-radius: 5px;
+  cursor: pointer;
+}
 
-
-
+.nav-trigger:hover {
+  background-color: rgb(155, 24, 24);
+  transition: background-color ease 0.2s;
+}
 
 /* MENU */
-.nav {}
-.nav__items {}
-.nav__item {}
-.nav__link {}
-.nav-close {}
+.nav {
+  height: 100vh;
+  width: 100%;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #402929;
+  opacity: 0.92;
+  transition: transform ease 0.8s;
+}
+.nav__items {
+  margin: 30px;
+  text-align: center;
+  font-size: 32px;
+}
 
+.nav__link {
+  color: white;
+  background-color: #402929;
+  opacity: 0.8;
+}
 
+.nav-close {
+  height: 45px;
+  width: 45px;
+  background-color: black;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
 
+.nav-close:hover {
+  background-color: rgb(155, 24, 24);
+  transition: background-color ease 0.2s;
+}
 
 /* MAIN */
-.page__main {}
-.page__wrapper {}
-.page__main-title {}
+.page__main {
+  width: 100%;
+  height: 100%;
+  margin: 0 30px;
+  display: flex;
+  align-items: center;
+}
 
-
-
+.page__main-title {
+  text-transform: uppercase;
+  color: white;
+  width: 280px;
+}
 
 /* FOOTER */
-.page__footer {}
-.page__footer {}
-.page__footer-copy {}
+.page__footer {
+  align-self: flex-end;
+  position: fixed;
+  width: 200px;
+  bottom: 15px;
+  left: 50%;
+  padding: 5px 10px;
+  background-color: #615a5a7c;
+  border-radius: 10px;
+  transform: translateX(-50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.page__footer-copy {
+  font-family: "Arial", "Helvetica", sans-serif;
+  color: #9b9999;
+}
+
+.menu-hidden {
+  transform: translateX(100%);
+  transition: transform 1s;
+}
+
+/* TABLET */
+@media all and (min-width: 768px) {
+  .nav__items {
+    margin: 60px;
+  }
+
+  .page__main {
+    margin: 0 60px;
+    position: absolute;
+    max-width: 400px;
+  }
+
+  .page__main-title {
+    font-size: 40px;
+  }
+
+  .page__footer {
+    width: 80%;
+    text-align: center;
+    padding: 5px 0;
+  }
+}
+
+/* LAPTOP */
+@media all and (min-width: 1440px) {
+  .nav__items {
+    margin: 120px;
+  }
+
+  .page__main {
+    position: absolute;
+    max-width: 990px;
+  }
+
+  .page__main-title {
+    font-size: 120px;
+  }
+
+  .page__footer {
+    width: 80%;
+    text-align: center;
+    padding: 5px 0;
+  }
+}
